--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -28,13 +28,13 @@ it for my own). Feel free to report any bug.<br>
 <p>The next functionnalities I plan to add :
 </p>
 <ul><li>Something
-to manage payment modes and categories ... (currently, you can add them, but not
+to manage payment modes ... (currently, you can add them, but not
 edit or remove what you've added). For now, you have to manually edit
 the XML file ... at your own risks.</li><li>Some statistics and charts about categories.</li><li>The ability to compress and encrypt data files and store them over the Internet.</li><li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in the accounts administration panel had many separators.</li><li><span class="bugFix">Bug fixed </span>: When you pressed return during editing a transaction date, the value date was not refreshed.</li><li><span class="bugFix">Bug fixed </span>: The state of "ignored" check boxes in the "generate periodical transactions" dialog was inverted.</li><li>Improvement
+<ul><li>Add a administration panel to manage categories.</li><li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in the accounts administration panel had many separators.</li><li><span class="bugFix">Bug fixed </span>: When you pressed return during editing a transaction date, the value date was not refreshed.</li><li><span class="bugFix">Bug fixed </span>: The state of "ignored" check boxes in the "generate periodical transactions" dialog was inverted.</li><li>Improvement
 : A empty date field is now equivalent to "today". When you duplicate a
 transaction, in the dialog, the date is automatically setted to today.</li>
 </ul>
