--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.2.6 (???)</h1>
+<h1>Version &nbsp;0.2.6 (12/10/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte quelques bugs. Vous trouverez
@@ -42,7 +42,7 @@ la prise en charge des fichiers au format OFX (issus de Money ou de
 votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout d'un panneau d'administration pour gérer les catégories.<span class="bugFix"></span><span class="bugFix"></span></li><li><span class="bugFix">Correction de bug </span> : Le popup menu&nbsp;dans l'écran d'administration des comptes comportait de nombreux séparateurs.</li><li><span class="bugFix">Correction de bug </span> : Quand on pressait la touche "Entrée" lors de l'édition d'une date d'opération, la date de valeur n'était pas mise à jour.</li><li><span class="bugFix">Correction de bug</span><span class="bugFix">&nbsp;</span>: L'état des cases à cocher "ignorée" était inversé dans le dialogue "Générer les opérations périodiques".</li><li>Amélioration : Un champ date laissé à vide est à présent équivalent à "aujourd'hui". Lors de
+  <li>Ajout d'un panneau d'administration pour gérer les catégories.<span class="bugFix"></span><span class="bugFix"></span></li><li><span class="bugFix">Correction de bug </span> : Le popup menu&nbsp;dans l'écran d'administration des comptes comportait de nombreux séparateurs.</li><li><span class="bugFix">Correction de bug</span>&nbsp;: Dans l'écran d'administration, on contrôle à présent que le nouveau nom n'est ni vide, ni déjà utilisé.</li><li><span class="bugFix">Correction de bug </span> : Quand on pressait la touche "Entrée" lors de l'édition d'une date d'opération, la date de valeur n'était pas mise à jour.</li><li><span class="bugFix">Correction de bug</span><span class="bugFix">&nbsp;</span>: L'état des cases à cocher "ignorée" était inversé dans le dialogue "Générer les opérations périodiques".</li><li>Amélioration : Un champ date laissé à vide est à présent équivalent à "aujourd'hui". Lors de
 la duplication d'une opération, la date de l'opération crée est
 automatiquement mise à aujourd'hui dans le dialogue de création.</li></ul>
 <hr>
