--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -29,7 +29,7 @@ N'hésitez pas à signaler les bugs que vous pourriez trouver.<br>
 <p>Quelques fonctionnalités que je prévois d'ajouter prochainement :
 </p>
 <ul><li>La
-gestion des modes de paiement et des catégories (pour l'instant, on peut
+gestion des modes de paiement (pour l'instant, on peut
 en ajouter, mais pas les éditer ou les supprimer). On peut éditer le
 fichier de données (au format XML) ... mais c'est à vos risques à
 périls.</li><li>Des statistiques et des graphiques sur les catégories (sans
