--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.6 (10/13/2009)</h1>
+<h1>Version &nbsp;0.2.7 (???)</h1>
 <p>This version is a prerelease with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
@@ -34,13 +34,14 @@ the XML file ... at your own risks.</li><li>Some statistics and charts about cat
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li>Add a administration panel to manage categories.</li><li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in the accounts administration panel had many separators.</li><li><span class="bugFix">Bug fixed</span> : The account manager now verified that new account name is not empty, and not already used.</li><li><span class="bugFix">Bug fixed </span>: When you pressed return during editing a transaction date, the value date was not refreshed.</li><li><span class="bugFix">Bug fixed </span>: The state of "ignored" check boxes in the "generate periodical transactions" dialog was inverted.</li><li>Improvement
-: A empty date field is now equivalent to "today". When you duplicate a
-transaction, in the dialog, the date is automatically setted to today.</li>
+<ul><li><span class="bugFix">Bug fixed</span> : A double-click on the
+transaction list in the check mode opened the "edit" dialog instead it
+would have mark the transaction as checked.</li>
 </ul>
 <hr>
-<h1>Older releases</h1>
-<h2>Version 0.2.5 (10/10/2009)</h2><ul><li><span class="bugFix"></span>Add account management.</li></ul><h2>Version 0.2.4 (10/02/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> :&nbsp;Under Linux, if
+<h1>Older releases</h1><h2>Version 0.2.6 (10/13/2009)</h2><ul><li>Add a administration panel to manage categories.</li><li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in the accounts administration panel had many separators.</li><li><span class="bugFix">Bug fixed</span> : The account manager now verified that new account name is not empty, and not already used.</li><li><span class="bugFix">Bug fixed </span>: When you pressed return during editing a transaction date, the value date was not refreshed.</li><li><span class="bugFix">Bug fixed </span>: The state of "ignored" check boxes in the "generate periodical transactions" dialog was inverted.</li><li>Improvement
+: A empty date field is now equivalent to "today". When you duplicate a
+transaction, in the dialog, the date is automatically setted to today</li></ul><h2>Version 0.2.5 (10/10/2009)</h2><ul><li><span class="bugFix"></span>Add account management.</li></ul><h2>Version 0.2.4 (10/02/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> :&nbsp;Under Linux, if
 Yapbam was launch with a right click on the jar file, the preference
 and state files were saved in the user home directory, not in Yapbam
 directory.<br>As Yabam is portable, it was a mistake.</li></ul><h2>Version 0.2.3 (10/01/2009)</h2><ul><li>Add the ability to edit or ignore transactions during the periodical transactions 
