--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -34,7 +34,7 @@ the XML file ... at your own risks.</li><li>Some statistics and charts about cat
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Bug fixed</span> : A double-click on the
+<ul><li>During the first startup, Yapbam now ask if you want to connect to the Internet and check for update.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : A double-click on the
 transaction list in the check mode opened the "edit" dialog instead it
 would have mark the transaction as checked.</li>
 </ul>
