--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -41,7 +41,7 @@ informations (typiquement la catégorie).</li><li>Peut-être
 la prise en charge des fichiers au format OFX (issus de Money ou de
 votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction de bug </span> : Un double-clic
+<ul><li>Au premier démarrage, Yapbam demande l'autorisation de se connecter pour&nbsp;rechercher automatiquement des mises à jour.<span class="bugFix"></span></li><li><span class="bugFix">Correction de bug </span> : Un double-clic
 sur la liste des opérations en mode "pointage" ouvrait le dialogue
 d'édition de l'opération au lieu de la marquer "pointée".</li></ul>
 <hr>
