--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.2.7 (???)</h1>
+<h1>Version &nbsp;0.2.7 (16/10/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte quelques bugs. Vous trouverez
@@ -142,8 +142,8 @@ Dans le but de préparer une architecture de plug-in, le format du
 fichier dans lequel on sauvegarde le dernier état a changé. Lors du
 passage à cette version, la taille des colonnes sauvegardées dans la
 version précédente sera perdue.</li>
-<li>L'odre
-des colonnes de la table des transaction est sauvegardé (dans les
+<li>L'ordre
+des colonnes de la table des transactions est sauvegardé (dans les
 versions précédentes, les colonnes étaient systématiquement remises
 dans l'odre par défaut. La taille mémorisée était appliquée aux
 colonnes dans l'ordre par défaut ... ce qui peut-être considéré comme
@@ -156,7 +156,7 @@ présent sauvegardé.</li>
 <h2>Version &nbsp;0.1.12 (07/09/2009)</h2>
 <ul>
 <li>Ajout d'un item "Préférences" dans le menu "Fichiers",
-possibilté de choisir la langue et le look and feel de l'application.</li>
+possibilité de choisir la langue et le look and feel de l'application.</li>
 </ul>
 <h2>Version &nbsp;0.1.11 (05/09/2009)</h2>
 <ul>
