--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -28,13 +28,13 @@ it for my own). Feel free to report any bug.<br>
 <p>The next functionnalities I plan to add :
 </p>
 <ul><li>Something
-to manage payment modes ... (currently, you can add them, but not
-edit or remove what you've added). For now, you have to manually edit
+to edit payment modes ... (currently, you can add or remove them, but not
+edit). For now, you have to manually edit
 the XML file ... at your own risks.</li><li>Some statistics and charts about categories.</li><li>The ability to compress and encrypt data files and store them over the Internet.</li><li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Bug fixed</span> : When an used category was deleted, sometimes, it remained some transactions with that category.</li>
+<ul><li>Add a payment mode administration panel with the ability to remove payment modes.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : When an used category was deleted, sometimes, it remained some transactions with that category.</li>
 </ul>
 <hr>
 <h1>Older releases</h1><h2>Version 0.2.7 (10/16/2009)</h2><ul><li>During the first startup, Yapbam now ask if you want to connect to the Internet and check for update.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : A double-click on the
