--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -28,9 +28,8 @@ N'hésitez pas à signaler les bugs que vous pourriez trouver.<br>
 </p>
 <p>Quelques fonctionnalités que je prévois d'ajouter prochainement :
 </p>
-<ul><li>La
-gestion des modes de paiement (pour l'instant, on peut
-en ajouter, mais pas les éditer ou les supprimer). On peut éditer le
+<ul><li>L'édition des modes de paiement (pour l'instant, on peut
+en ajouter, les supprimer, mais pas les éditer). On peut éditer le
 fichier de données (au format XML) ... mais c'est à vos risques à
 périls.</li><li>Des statistiques et des graphiques sur les catégories (sans
 quoi, leur saisie n'aurait aucun intérêt).</li><li>La possibilité de compresser le fichier de
@@ -41,7 +40,7 @@ informations (typiquement la catégorie).</li><li>Peut-être
 la prise en charge des fichiers au format OFX (issus de Money ou de
 votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
-<ul><li><span class="bugFix">Correction de bug </span> : Lorsqu'une catégorie était supprimée, elle n'était parfois pas retirée de toutes les opérations.</li></ul>
+<ul><li>Ajout d'un panneau d'administration des modes de paiement permettant l'ajout et la suppression de modes.<span class="bugFix"></span></li><li><span class="bugFix">Correction de bug </span> : Lorsqu'une catégorie était supprimée, elle n'était parfois pas retirée de toutes les opérations.</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version &nbsp;0.2.7 (16/10/2009)</h2><ul><li>Au premier démarrage, Yapbam demande l'autorisation de se connecter pour&nbsp;rechercher automatiquement des mises à jour.<span class="bugFix"></span></li><li><span class="bugFix">Correction de bug </span> : Un double-clic
