--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.8 (???)</h1>
+<h1>Version &nbsp;0.2.8 (10/18/2009)</h1>
 <p>This version is a prerelease with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
