--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.8 (10/18/2009)</h1>
+<h1>Version &nbsp;0.2.9 (???)</h1>
 <p>This version is a prerelease with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
@@ -34,10 +34,11 @@ the XML file ... at your own risks.</li><li>Some statistics and charts about cat
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li>Add a payment mode administration panel with the ability to remove payment modes.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : When an used category was deleted, sometimes, it remained some transactions with that category.</li>
+<ul><li><span class="develop">Developpers</span>
+: Rewrite of transactions filtering in order to prepare statistics plugin.</li>
 </ul>
 <hr>
-<h1>Older releases</h1><h2>Version 0.2.7 (10/16/2009)</h2><ul><li>During the first startup, Yapbam now ask if you want to connect to the Internet and check for update.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : A double-click on the
+<h1>Older releases</h1><h2>Version 0.2.8 (10/18/2009)</h2><ul><li>Add a payment mode administration panel with the ability to remove payment modes.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : When an used category was deleted, sometimes, it remained some transactions with that category.</li></ul><h2>Version 0.2.7 (10/16/2009)</h2><ul><li>During the first startup, Yapbam now ask if you want to connect to the Internet and check for update.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : A double-click on the
 transaction list in the check mode opened the "edit" dialog instead it
 would have mark the transaction as checked.</li></ul><h2>Version 0.2.6 (10/13/2009)</h2><ul><li>Add a administration panel to manage categories.</li><li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in the accounts administration panel had many separators.</li><li><span class="bugFix">Bug fixed</span> : The account manager now verified that new account name is not empty, and not already used.</li><li><span class="bugFix">Bug fixed </span>: When you pressed return during editing a transaction date, the value date was not refreshed.</li><li><span class="bugFix">Bug fixed </span>: The state of "ignored" check boxes in the "generate periodical transactions" dialog was inverted.</li><li>Improvement
 : A empty date field is now equivalent to "today". When you duplicate a
