--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -30,11 +30,11 @@ it for my own). Feel free to report any bug.<br>
 <ul><li>Something
 to edit payment modes ... (currently, you can add or remove them, but not
 edit). For now, you have to manually edit
-the XML file ... at your own risks.</li><li>More statistics and charts about categories.</li><li>The ability to compress and encrypt data files and store them over the Internet.</li><li>An auto-complete wizard in the "new transaction"
+the XML file ... at your own risks.</li><li>The ability to compress and encrypt data files and store them over the Internet.</li><li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li>Add a statistic panel (expenses by categories).</li>
+<ul><li>Add a category statistic panel.</li><li>Change the administration panel layout.</li>
 </ul>
 <hr>
 <h1>Older releases</h1><h2>Version 0.2.9 (10/24/2009)</h2><ul><li><span class="develop">Developpers</span>
