--- a/Yapbam/src/localization/license.html
+++ b/Yapbam/src/localization/license.html
@@ -23,6 +23,6 @@ License</a>.
 This software use the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
-This software use a Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>.
-The source code of this class is included in Yapbam sources (net.yapbam.tools.currency.converter.CurrencyConverter).
+This software use a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>.
+The source code of this class is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).
 </body></html>
