--- a/Yapbam/src/localization/fr/license.html
+++ b/Yapbam/src/localization/fr/license.html
@@ -26,6 +26,6 @@ License</a>.
 Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
-Ce logiciel utilise un convertisseur de devises écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>.
+Ce logiciel utilise une version modifiée du convertisseur de devises écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>.
 Le code source de cette classe est inclus dans les sources de Yapbam (net.yapbam.tools.currency.converter.CurrencyConverter).
 </body></html>
