--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.3.1 (10/31/2009)</h1>
+<h1>Version &nbsp;0.3.2 (11/??/2009)</h1>
 <p>This version is a prerelease with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
@@ -34,15 +34,15 @@ the XML file ... at your own risks.</li><li>The ability to compress and encrypt 
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li>The currency converter tool now work through proxied Internet connections and a now displays a conversion rates table.</li><li><span class="bugFix">Bug fixed</span>
+<ul><li>The main frame title now indicates if the data needs to be saved (its title ends with a *).</li>
+</ul>
+<hr>
+<h1>Older releases</h1><h2>Version 0.3.1 (10/31/2009)</h2><ul><li>The currency converter tool now work through proxied Internet connections and a now displays a conversion rates table.</li><li><span class="bugFix">Bug fixed</span>
 : When the currency converter was called, closing the main window didn't shutdown the java virtual machine.</li><li><span class="bugFix">Bug fixed</span>
 : The percentage in the pie statistic's chart's tooltips were&nbsp;wrong.</li><li><span class="bugFix">Bug fixed</span>
 : Sometimes, when a transaction was duplicated or convert to periodical, the payment mode of the created transaction were wrong.</li><li><span class="bugFix">Bug fixed</span>
-: The balance history was wrong when there was a switch from summer to winter time in it.</li>
-</ul>
-<hr>
-<h1>Older releases</h1><h2>Version 0.3.0 (10/25/2009)</h2><ul><li>Add a category statistic panel.</li><li>Add a currency converter tool (a preview release which don't work with proxied Internet connections).</li><li>Change the administration panel layout.</li><li><span class="bugFix">Bug fixed</span>
-: The "converts to periodical transaction" menu item stayed enabled when we leaved the "transactions" panel</li></ul><h2>Version 0.2.9 (10/24/2009)</h2><ul><li><span class="develop">Developpers</span>
+: The balance history was wrong when there was a switch from summer to winter time in it.</li></ul><h2>Version 0.3.0 (10/25/2009)</h2><ul><li>Add a category statistic panel.</li><li>Add a currency converter tool (a preview release which don't work with proxied Internet connections).</li><li>Change the administration panel layout.</li><li><span class="bugFix">Bug fixed</span>
+: The "converts to periodical transaction" menu item stayed enabled when we leaved the "transactions" panel.</li></ul><h2>Version 0.2.9 (10/24/2009)</h2><ul><li><span class="develop">Developpers</span>
 : Rewrite of transactions filtering in order to prepare statistics plugin.</li><li><span class="bugFix">Bug fixed</span>
 : When transactions where removed, the balance history could contains
 extra segments (especially when you removed all the transactions).</li></ul><h2>Version 0.2.8 (10/18/2009)</h2><ul><li>Add a payment mode administration panel with the ability to remove payment modes.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : When an used category was deleted, sometimes, it remained some transactions with that category.</li></ul><h2>Version 0.2.7 (10/16/2009)</h2><ul><li>During the first startup, Yapbam now ask if you want to connect to the Internet and check for update.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> : A double-click on the
